4/10/12 turn off point tool highlighting when lines are hidden on graph
4/10/12 highlight the pointer tool by changing its background color
4/10/12 don't use rounding when determining if point tool is on line
4/10/12 delete unnecessary specializations of SlopeInterceptLine
4/10/12 first pass at highlighting point tool when it's on any line
4/10/12 when "Hide Lines" is unchecked, disable Save Line and Erase Lines buttons
4/10/12 keep saved and standard lines in model
4/10/12 add line subclasses for different categories of lines, move line color into model because it's convenient
4/10/12 make point tool a full-fledged model element, in preparation for adding highlighting feature
4/10/12 start with pointer tool off the grid
4/9/12 static constants for standard lines
4/9/12 clean up rise/run bracket class
4/9/12 make view classes package private
4/9/12 rename equation controls
4/9/12 hide equation on interactive line when equation control panel in minimized
4/9/12 factory pattern for creating reduced equations in the correct format
4/9/12 first attempt at revising format of equations shown on graphed lines, complicated and buggy while dragging
4/9/12 keep bounds of point tool node inside bounds of stage
4/9/12 add convenience constructor to LineGraph
4/9/12 when point tool is outside grid, don't snap and don't display coordinates
4/9/12 change rendering order of line types: interactive, saved, standard
4/9/12 convert graph and components to use absolute coordinates instead of deltas for mvt
4/9/12 separate layout and positioning of graph
4/9/12 constrain point tool to stage bounds
4/9/12 separate point tool from graph
4/9/12 make mvt apply to entire canvas, not just the graph
4/6/12 make slope (rise over run) brackets visible by default, since AP feels strongly that they should always be visible
4/6/12 use SettableNot to invert linesVisible property
4/6/12 flatten line graph hierarchy, to provide control over rendering order for the different categories of lines